[package]
name = "vrgit"
version = "0.1.0"
authors = ["Vincent Udén <vincentuden@gmail.com>"]
edition = "2018"
description = "An EXPERIMENTAL tui for git"
license="MIT"

[[bin]]
name = "vrgit"
path = "src/main.rs"

[dependencies]
bitflags="*"
itertools="*"
[dependencies.pancurses]
version="*"
features = ["win32"]

[target.'cfg(target_os = "linux")'.dependencies]
ncurses="*"
