[package]
name = "vrgit"
version = "0.1.0"
authors = ["Vincent Udén <vincentuden@gmail.com>"]
edition = "2018"
description = "An EXPERIMENTAL tui for git"
license="MIT"

[[bin]]
name = "vrgit"
path = "src/main.rs"

[dependencies]
bitflags="1.2.1"
itertools="0.9.0"
[dependencies.pancurses]
version="0.17.0"
features = ["win32"]

[target.'cfg(target_os = "linux")'.dependencies]
ncurses="5.101.0"
